update no titulo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </nav>
   <main id="pag-inicial">
     <div id="espacamento" style="height: 10vh;"></div> <!--Espaçamento da imagem para o main-->
-    <H1>Temos váriedades de Tortas </H1>
+    <H1>Temos variedades de Tortas </H1>
        <ul id="grid_home">
         <div class="coluna">
           <li>
